packages/typ/tests/fixtures/diagnostics/0692_fcm_pack_tuple_type_mismatch_04.ml.expected
File "0692_fcm_pack_tuple_type_mismatch_04.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0692_fcm_pack_tuple_type_mismatch_04 is not a valid module name.

File "0692_fcm_pack_tuple_type_mismatch_04.ml", line 11, characters 16-23:
11 | let _ = (module M_delta : Cell_delta with type t = bool * bool)
                     ^^^^^^^
Error: This expression has type (module Cell_delta with type t = bool * bool)
       but an expression was expected of type
         (module Cell_delta with type t = M_delta.t)
       Type bool * bool is not compatible with type M_delta.t = int * int
       Type bool is not compatible with type int
